--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tictactoe",
-  "private": true,
-  "homepage": "https://anwarasry.github.io/tictactoe",
+  "private": false,
+  "homepage": "https://anwarasry.github.io/TicTacToe",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
